# ZKSMT-pub

./: .gitignore  Dockerfile  README.md  full.py  install_docker.sh  limited.py  runner.py  setup_container.sh  simple.py
benchmark/: boogie-tests_Test_aitest0_constants.bpl-0.zksmt  boogie-tests_Test_aitest1_Bound.bpl-0.zksmt  boogie-tests_Test_aitest9_VarMapFixpoint.bpl-0.zksmt  boogie-tests_Test_aitest9_VarMapFixpoint.bpl-1.zksmt  boogie-tests_Test_commandline_multiple_procs_verify_four_asterisk_wildcard.bpl-2.zksmt  boogie-tests_Test_commandline_xml.bpl-0.zksmt  boogie-tests_Test_commandline_xml.bpl-1.zksmt  boogie-tests_Test_commandline_xml.bpl-2.zksmt  boogie-tests_Test_datatypes_ex.bpl-0.zksmt  boogie-tests_Test_extractloops_detLoopExtract.bpl-0.zksmt  boogie-tests_Test_extractloops_detLoopExtractNested.bpl-0.zksmt  boogie-tests_Test_houdini_deterministic.bpl-0.zksmt  boogie-tests_Test_houdini_houd10.bpl-0.zksmt  boogie-tests_Test_houdini_houd11.bpl-0.zksmt  boogie-tests_Test_houdini_houd2.bpl-0.zksmt  boogie-tests_Test_houdini_houd2.bpl-1.zksmt  boogie-tests_Test_houdini_houd3.bpl-0.zksmt  boogie-tests_Test_houdini_houd7.bpl-0.zksmt  (+187 more)
checkers/: Makefile  (+16 more)
zkchecker/: CMakeLists.txt  README.md  benchmark.py  boolean_checker.cpp  boolean_checker.h  checker.cpp  checker.h  commons.h  cycle_count.txt  equal_checker.cpp  equal_checker.h  lia_checker.cpp  lia_checker.h  microbenchmark.h  parser.cpp  parser.h  plot.py  polynomial.cpp  polynomial.h  roram.cpp  roram.h  run_test.py  table.h  timing.cpp  timing.h  typing.cpp  typing.h  utils.cpp  utils.h  zkchecker.cpp
(+2635 files in other folders)
